@@ -9,7 +9,7 @@ var browser = require('bowser').browser;
 // guess what there's even a plugin! http://cdnjs.com/libraries/jquery-ajaxtransport-xdomainrequest
 if (!browser.msie || parseFloat(browser.version) > 8) {
   test('jQuery module success case', function(t) {
-    t.plan(9);
+    t.plan(10);
 
     var fauxJax = require('faux-jax');
     var parse = require('url-parse');
@@ -48,6 +48,14 @@ if (!browser.msie || parseFloat(browser.version) > 8) {
       var firstRequest = requests[0];
       var secondRequest = requests[1];
       var requestURL = parse(firstRequest.requestURL, true);
+
+      t.deepEqual(
+        firstRequest.requestHeaders, {
+          'Content-Type': 'application/x-www-form-urlencoded',
+          'Accept': 'application/json'
+        },
+        'requestHeaders matches'
+      );
 
       t.equal(
         requestURL.host,
